# brush-synth

./: .gitignore  CMakeLists.txt  THIRDPARTY_NOTICES.txt  build.bat  release.bat  run.bat
.trae/: rules.md
include/: AbrWriter.h  AppSettings.h  MainWindow.h  PreviewWidget.h  TextureGenerator.h
licenses/: Qt_LGPLv3.txt
src/: AbrWriter.cpp  AppSettings.cpp  MainWindow.cpp  main.cpp
